--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,7 +9,7 @@
     <h1>Hmm.. Looks like you've gone off the beaten path. </h1>
     <h3>Don't worry. Ashley is looking into it. Click on the image to head back to the South Yorkshire area.</h3>
     <a href="index.html">
-        <img src="assets/images/uncle-sam-404.png" alt="rosie-404">
+        <img src="assets/images/uncle-sam-404.png" alt="uncle-sam-404">
     </a>
 </body>
 </html>
