--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Exo:wght@100..700&family=Roboto:wght@100..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
-    <title>Ashley</title>
+    <title>Ashley Lawrence</title>
 </head>
 <body>
     <header>
@@ -24,23 +24,33 @@
                 </div>
                 <div class="row no-gutters">
                     <div class="col">
-                        <ul class="list-inline menucontainer" id="nav">
-                            <li class="col-6 col-sm-3 ui-menu-color-home list-inline-item menuitem">
+                        <ul class="list-inline menucontainer row" id="nav">
+                            <li class="col-xs-6 col-sm-2 ui-menu-color-home menuitem list-inline-item">
                                 <a href="index.html" class="hvr-sweep-to-bottom">
                                     <i class="fa-solid fa-house" aria-hidden="true"></i><span>Home</span>
                                 </a>
                             </li>
-                            <li class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menuitem">
+                            <li class="col-xs-6 col-sm-2 ui-menu-color-resume menuitem list-inline-item">
                                 <a href="resume.html" class="hvr-sweep-to-bottom">
                                     <i class="fa-solid fa-file-lines" aria-hidden="true"></i><span>Resume</span>
                                 </a>
                             </li>
-                            <li class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem">
+                            <li class="col-xs-6 col-sm-2 ui-menu-color-contact menuitem list-inline-item">
                                 <a href="contact.html" class="hvr-sweep-to-bottom">
                                     <i class="fa-solid fa-comment" aria-hidden="true"></i><span>Contact</span>
                                 </a>
                             </li>
-                            <li class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem">
+                            <li class="col-xs-6 col-sm-2 ui-menu-color-interests menuitem list-inline-item">
+                                <a href="interests.html" class="hvr-sweep-to-bottom" target="_blank">
+                                    <i class="fa-solid fa-heart-circle-plus" aria-hidden="true"></i><span>Interests</span>
+                                </a>
+                            </li>
+                            <li class="col-xs-6 col-sm-2 ui-menu-color-github menuitem list-inline-item">
+                                <a href="github.html" class="hvr-sweep-to-bottom" target="_blank">
+                                    <i class="fa-solid fa-github" aria-hidden="true"></i><span>GitHub</span>
+                                </a>
+                            </li>
+                            <li class="col-xs-6 col-sm-2 ui-menu-color-download menuitem list-inline-item">
                                 <a href="assets/cv/ash-cv.pdf" class="hvr-sweep-to-bottom" target="_blank">
                                     <i class="fa-solid fa-download" aria-hidden="true"></i><span>Download CV</span>
                                 </a>
@@ -115,7 +125,7 @@
                     </div>
                     <div class="value">
                         <p>
-                            https://www.linkedin.com/in/ashley-lawrence-6a676318a/
+                            ashley-lawrence-6a676318a
                         </p>
                     </div>
                 </div>
