--- a/resume.html
+++ b/resume.html
@@ -24,23 +24,33 @@
                 </div>
                 <div class="row no-gutters">
                     <div class="col">
-                        <ul class="list-inline menucontainer" id="nav">
-                            <li class="col-6 col-sm-3 ui-menu-color-home list-inline-item menuitem">
+                        <ul class="list-inline menucontainer row" id="nav">
+                            <li class="col-xs-6 col-sm-3 ui-menu-color-home list-inline-item menuitem">
                                 <a href="index.html" class="hvr-sweep-to-bottom">
                                     <i class="fa-solid fa-house" aria-hidden="true"></i><span>Home</span>
                                 </a>
                             </li>
-                            <li class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menuitem">
+                            <li class="col-xs-6 col-sm-2 ui-menu-color-resume list-inline-item menuitem">
                                 <a href="resume.html" class="hvr-sweep-to-bottom">
                                     <i class="fa-solid fa-file-lines" aria-hidden="true"></i><span>Resume</span>
                                 </a>
                             </li>
-                            <li class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem">
+                            <li class="col-xs-6 col-sm-2 ui-menu-color-contact list-inline-item menuitem">
                                 <a href="contact.html" class="hvr-sweep-to-bottom">
                                     <i class="fa-solid fa-comment" aria-hidden="true"></i><span>Contact</span>
                                 </a>
                             </li>
-                            <li class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem">
+                            <li class="col-xs-6 col-sm-2 ui-menu-color-interests list-inline-item menuitem">
+                                <a href="interests.html" class="hvr-sweep-to-bottom" target="_blank">
+                                    <i class="fa-solid fa-heart-circle-plus" aria-hidden="true"></i><span>Interests</span>
+                                </a>
+                            </li>
+                            <li class="col-xs-6 col-sm-2 ui-menu-color-github list-inline-item menuitem">
+                                <a href="github.html" class="hvr-sweep-to-bottom" target="_blank">
+                                    <i class="fa-solid fa-github" aria-hidden="true"></i><span>GitHub</span>
+                                </a>
+                            </li>
+                            <li class="col-xs-6 col-sm-2 ui-menu-color-download list-inline-item menuitem">
                                 <a href="assets/cv/ash-cv.pdf" class="hvr-sweep-to-bottom" target="_blank">
                                     <i class="fa-solid fa-download" aria-hidden="true"></i><span>Download CV</span>
                                 </a>
