--- a/resume.html
+++ b/resume.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" type="text/css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Exo:wght@100..700&family=Roboto:wght@100..700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" type="text/css">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
     <title>Ashley</title>
 </head>
@@ -41,12 +42,12 @@
                                 </a>
                             </li>
                             <li class="col-xs-6 col-sm-2 ui-menu-color-interests list-inline-item menuitem">
-                                <a href="interests.html" class="hvr-sweep-to-bottom" target="_blank">
+                                <a href="interests.html" class="hvr-sweep-to-bottom">
                                     <i class="fa-solid fa-heart-circle-plus" aria-hidden="true"></i><span>Interests</span>
                                 </a>
                             </li>
                             <li class="col-xs-6 col-sm-2 ui-menu-color-github list-inline-item menuitem">
-                                <a href="github.html" class="hvr-sweep-to-bottom" target="_blank">
+                                <a href="github.html" class="hvr-sweep-to-bottom">
                                     <i class="fa-solid fa-github" aria-hidden="true"></i><span>GitHub</span>
                                 </a>
                             </li>
