Implement emailjs integration on contact page

--- a/github.html
+++ b/github.html
@@ -49,7 +49,7 @@
                                     <i class="fa-solid fa-heart-circle-plus" aria-hidden="true"></i><span>Interests</span>
                                 </a>
                             </li>
-                            <li class="col-xs-6 col-sm-2 ui-menu-color-download menuitem">
+                            <li class="col-xs-6 col-sm-2 ui-menu-color-github menuitem">
                                 <a href="github.html" class="hvr-sweep-to-bottom" target="_blank">
                                     <i class="fa-solid fa-github" aria-hidden="true"></i><span>GitHub</span>
                                 </a>
