--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Exo:wght@100..700&family=Roboto:wght@100..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" type="text/css">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+    </script>
+    <script type="text/javascript">
+        (function(){
+            emailjs.init("V9dj2lTVzBQAU2Aw0"); 
+        })();
+    </script>
     <title>Ashley</title>
 </head>
 <body>
@@ -69,9 +77,9 @@
                 <h5 class="uppercase text-center">Let's work together!</h5>
 
                 <div class="center-form">
-                    <form>
+                    <form onsubmit="return sendMail(this);">
                         <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required>
-                        <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required>
+                        <input type="email" name="emailaddress" id="emailaddress" class="form-control" placeholder="Email" required>
                         <textarea rows="5" name="projectsummary" id="projectsummary" class="form-control" placeholder="Project description" required></textarea>
                         <div class="form-row text-center">
                             <div class="col">
@@ -141,6 +149,7 @@
             </div>
         </div>
     </footer>
+    <script src="assets/js/sendEmail.js"></script>
     <!-- Font Awesome kit -->
     <script src="https://kit.fontawesome.com/5c8b8e6738.js" crossorigin="anonymous"></script>
 </body>
